compiler/fir/analysis-tests/testData/resolve/extraCheckers/kt72537.kt
fun main() {
    val x = <!UNRESOLVED_REFERENCE!>++<!>++<!SYNTAX!><!>
}
